# graspy-natlas

./: .gitignore  README.md  ecosystem.config.js  package.json  turbo.json
.agent/rules/: verification.md
apps/backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  optimized_pidgin_explainer.json  package.json  pyproject.toml  seed_content.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1006a444a0e2_add_topic_language.py  35c3572223d5_add_session_id_and_create_access_codes.py  4cfffed5dc5f_add_subject_user_topic_chat_models.py  4f1ca304ce5c_create_interaction_logs_table.py  8c20ffaf6b1e_add_description_to_topic.py  eb3b04086c4b_add_topic_translations.py
apps/backend/app/: database.py  settings.py
apps/backend/app/config/: llm.py
apps/backend/app/domains/: auth.py
apps/backend/app/domains/access/: controller.py  dependencies.py  models.py  repository.py  schemas.py
apps/backend/app/domains/study/: controller.py  metrics.py  models.py  prompts.py  repository.py  schemas.py  service.py
apps/backend/app/domains/study/study/: prompts.py  service.py  tools.py
apps/backend/app/domains/subject/: controller.py  models.py  repository.py  schemas.py  service.py
apps/backend/app/utils/: security.py
apps/backend/scripts/: check_translations.py  delete_topic.py  inspect_dspy.py  manage_access.py  migrate_content_to_translations.py  migrate_hashes.py  optimize_pidgin.py  repro_access.py  seed_db.py  verify_access.py  verify_chat_repetition.py  verify_compaction.py  verify_db.py  verify_language_mapping.py
(+53 files in other folders)
